After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762720 - Moving Epiphany tabs with keyboard shortcuts visually broken
Moving Epiphany tabs with keyboard shortcuts visually broken
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkNotebook
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
: 762823 (view as bug list)
Depends on:
Blocks: 762631
 
 
Reported: 2016-02-26 11:59 UTC by Adrien Plazas
Modified: 2016-02-29 21:03 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adrien Plazas 2016-02-26 11:59:30 UTC
In the JHBuild version of Epiphany the Ctrl+Shift+PageUp/Down stopped working, reverting GTK+ to 3.18.0 fixes it.
Comment 1 Adrien Plazas 2016-02-26 12:00:03 UTC
I am currently bisecting GTK+ to check where it could come from.
Comment 2 Adrien Plazas 2016-02-26 15:41:22 UTC
It stopped working since commit c03fed4840bb0b07fb950f46e20e8c6b7dbb7c3e
Comment 3 Matthias Clasen 2016-02-29 15:29:56 UTC
My bet is on bug 754110 if this is about modifiers getting lost under wayland
Comment 4 Adrien Plazas 2016-02-29 15:35:56 UTC
The problem happened on Xorg, I didn't check Wayland.
Comment 5 Michael Catanzaro 2016-02-29 20:40:28 UTC
*** Bug 762823 has been marked as a duplicate of this bug. ***
Comment 6 Michael Catanzaro 2016-02-29 20:41:20 UTC
From bug #762823, it's clear that the shortcuts do work, they just LOOK like they don't work.
Comment 7 Benjamin Otte (Company) 2016-02-29 21:03:13 UTC
commit a74bb0dec4d0a5032908e47619a82cc4f86b47a1
Author: Benjamin Otte <otte@redhat.com>
Date:   Mon Feb 29 21:57:19 2016 +0100

    notebook: Reallocate tab gadgets when we reorder them
        
    Otherwise they stay in their position and don't cause a redraw. Which
    really confuses Epiphany users apparently.